# ctf-tools-installer

./: .gitignore  LICENSE  MANUAL.md  README.md  app.py  ctf_installer.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
ctf_tools/: __init__.py  cli.py  core.py  desktop.py  tui.py  updater.py
ctf_tools/web/: app.py
ctf_tools/web/static/: script.js  style.css
ctf_tools/web/templates/: index.html
packaging/: build-appimage.sh  build-deb.sh  ctforge.desktop
static/: script.js  style.css
templates/: index.html
