[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ctforge"
version = "2.0.0"
description = "CTForge — A comprehensive CTF tools installer with Desktop App, Web Dashboard & CLI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Md. Shahin Alam"}
]
dependencies = [
    "flask>=3.0",
    "flask-socketio>=5.3",
    "eventlet>=0.35",
    "rich>=13.0",
    "pywebview>=5.0",
    "requests>=2.31",
]

[project.scripts]
ctforge = "main:main"

[project.urls]
Homepage = "https://github.com/uchihashahin01/ctf-tools-installer"
Repository = "https://github.com/uchihashahin01/ctf-tools-installer"
Issues = "https://github.com/uchihashahin01/ctf-tools-installer/issues"
